Fixed the .card-bottom look better on mobile

--- a/source/scss/components/modules/work.scss
+++ b/source/scss/components/modules/work.scss
@@ -66,8 +66,11 @@
       margin: 1em;
     }
     .card-bottom {
-      min-height: 70vh;
+      min-height: 60vh;
       margin-bottom: 5em;
+      @media screen and (max-width: $tablet){
+        min-height: 40vh;
+      }
     }
   }
   .curtains{
